--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🥨원두 정기 구독</title>
+    <title>원두 정기 구독</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -27,7 +27,7 @@
                 <input type="email" placeholder="이메일" required>
                 <button type="submit">send</button>
             </form>
-            <br> <h2>★매일 특별한 커피 타임</h2>
+            <br> <h2>매일 특별한 커피 타임</h2>
             <h3>🥨고객님의 취향에 맞게 스페셜 커피를 즐겨 보세요</h3>
             <p>🥨이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
 
@@ -37,24 +37,27 @@
     <!-- 배너 -->
     <section id="banner">
         <div class="banner-content">
-            <h2>지금 막 로스팅했어요</h2>
             <h3>정성을 다해 로스팅한 커피를 매주 보내드립니다</h3>
             <p>스위커 매장의 맛있는 커피를 집에서도 즐기세요☕</p>
             <button>자세히 알아보기</button>
         </div>
-        
-        <select class="select-menu">
-            <option value="light">라이트 로스트</option>
-            <option value="medium">미디엄 로스트</option>
-            <option value="dark">다크 로스트</option>
-            <option value="kakao">카카오 로스트</option>
-        </select>
+    </section>
+    <section id="banner">
+        <div class="banner-content">
+            <h2>지금 막 로스팅했어요</h2>
+            <select class="select-menu">
+                <option value="light">라이트 로스트</option>
+                <option value="medium">미디엄 로스트</option>
+                <option value="dark">다크 로스트</option>
+                <option value="kakao">카카오 로스트</option>
+            </select>
+        </div>
     </section>
 
     <!-- 멤버십 -->
     <section id="membership">
-        <h2>회원이 되시면</h2>
         <div class="membership-content">
+            <h2>회원이 되시면</h2>
             <h3>월간스위커 회원 혜택</h3>
             <p>스위커 온라인몰 구매 시 커피원두, 드립백 상품 3% 할인</p>
             <p>스위커 온라인몰 5,000원 상품권 증정</p>
@@ -135,8 +138,8 @@
         <div class="newsletter">
             <p>이메일 주소를 보내시면 구독 안내문과 새로운 소식들을 보내 드립니다.</p>
             <form class="add-email">
-                <input type="email" placeholder="이메일 주소" required>
-                <button type="submit">보내기</button>
+                <input type="email" placeholder="이메일" required>
+                <button type="submit">send</button>
             </form>
         </div>
     </section>
